--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,58 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Club Rafting</title>
-    <meta name="description" content="Welcome to Club Rafting. Explore our site to learn more about our exciting rafting adventures.">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header class="header-container">
-        <img src="images/ClubRaftingLogo.png" alt="Club Rafting Site Logo" class="logo">
+        <div class="logo">
+            <img src="images/ClubRaftingLogo.png" alt="The Rafting Club Logo">
+        </div>
+        <h1>Club Rafting</h1>
         <nav class="navbar">
             <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact Us</a>
         </nav>
     </header>
-    <main class="home">
-        <section class="hero">
-            <img src="images/home-hero.jpg" alt="Rafting Adventure">
-            <h2>Welcome to Club Rafting</h2>
-        </section>
-        <section class="newsletter">
-            <h3>Subscribe to our Newsletter</h3>
-            <form>
-                <input type="email" placeholder="Your email address">
-                <button type="submit">Subscribe</button>
-            </form>
-        </section>
-        <section class="cta">
-            <h3>Join Us for an Adventure</h3>
-            <a href="trips.html" class="cta-button">View Our Trips</a>
-        </section>
-        <section class="content-grid">
-            <div class="grid-item">
-                <img src="images/rafting1.jpg" alt="Rafting 1">
-                <p>Experience the thrill of white-water rafting.</p>
-            </div>
-            <div class="grid-item">
-                <img src="images/rafting2.jpg" alt="Rafting 2">
-                <p>Join us for a scenic and exciting adventure.</p>
-            </div>
-            <div class="grid-item">
-                <img src="images/rafting3.jpg" alt="Rafting 3">
-                <p>Perfect for families and friends.</p>
-            </div>
-        </section>
-    </main>
+
+    <div class="hero">
+        <img src="images/pexels-hilmiisilak-3.jpg" alt="Rafting Adventure">
+        <h2>Join Us for an Unforgettable Adventure</h2>
+    </div>
+
+    <section class="newsletter">
+        <h3>Sign Up for Our Newsletter</h3>
+        <form action="#">
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <button type="submit">Subscribe</button>
+        </form>
+    </section>
+
+    <section class="cta">
+        <h3>Ready for an Adventure?</h3>
+        <a href="trips.html">Check Out Our Trips</a>
+    </section>
+
+    <section class="content-grid">
+        <div class="grid-item">
+            <img src="images/pexels-hilmiisilak-1.jpg" alt="Rafting Experience">
+            <p>Experience the thrill of white water rafting with our expert guides.</p>
+        </div>
+        <div class="grid-item">
+            <img src="images/pexels-hilmiisilak-2.jpg" alt="Family Adventure">
+            <p>Perfect for family adventures and group outings.</p>
+        </div>
+    </section>
+
     <footer>
-        <p>©️2024 | Club Rafting | Msebeyenjabulo Magubane | WDD 130</p>
-        <nav class="sociallinks">
-            <a href="https://facebook.com"><img src="images/Facebook_Icon.webp" alt="Facebook"></a>
-            <a href="https://instagram.com"><img src="images/Instagram_Icon.webp" alt="Instagram"></a>
-            <a href="https://twitter.com"><img src="images/Twitter_X_Icon.webp" alt="Twitter"></a>
-        </nav>
-        <a href="images/home-wireframe.png" class="wireframe-link">Wireframe</a>
+        <p>&copy; 2024 The Rafting Club. All rights reserved.</p>
+        <div class="sociallinks">
+            <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
+            <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
+        </div>
+        <a href="images/homepage_wireframe.png" class="wireframe-link">Home Page Wireframe</a>
     </footer>
 </body>
 </html>
