home page edits

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -8,20 +8,24 @@
 </head>
 <body>
     <header class="header-container">
-        <div class="logo">
-            <img src="images/ClubRaftingLogo.png" alt="The Rafting Club Logo">
-        </div>
-        <h1>Club Rafting</h1>
+        <img src="images/ClubRaftingLogo.png" alt="Club Rafting Site Logo" class="logo">
+        <!--<h1>Club Rafting</h1> -->
         <nav class="navbar">
             <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact Us</a>
         </nav>
     </header>
-
+    <!--  -->
+    <!-- </header>
+     <div class="hero">
+        <h1>Contact Us</h1>
+        <img src="images/rafting12_1024.jpg" alt="People on a raft waving">
+    </div> -->
     <div class="hero">
+        <h1>Join Us for an Unforgettable Adventure</h1>
         <img src="images/pexels-hilmiisilak-3.jpg" alt="Rafting Adventure">
-        <h2>Join Us for an Unforgettable Adventure</h2>
     </div>
 
     <section class="newsletter">
