--- a/wwr/index.html
+++ b/wwr/index.html
@@ -24,7 +24,7 @@
         <img src="images/rafting12_1024.jpg" alt="People on a raft waving">
     </div> -->
     <div class="hero">
-        <h1>Join Us for an Unforgettable Adventure</h1>
+        <h1 class="home-page-title">Join Us for an Unforgettable Adventure</h1>
         <img src="images/pexels-hilmiisilak-3.jpg" alt="Rafting Adventure">
     </div>
 
