--- a/wwr/index.html
+++ b/wwr/index.html
@@ -24,12 +24,12 @@
         <img src="images/rafting12_1024.jpg" alt="People on a raft waving">
     </div> -->
     <div class="hero">
-        <h1 class="home-page-title">Join Us for an Unforgettable Adventure</h1>
+        <h1 class="home-page-title">An Unforgettable Adventure Awaits</h1>
         <img src="images/pexels-hilmiisilak-3.jpg" alt="Rafting Adventure">
     </div>
 
     <section class="newsletter">
-        <h3>Sign Up for Our Newsletter</h3>
+        <h3 class="newsletter-heading">Sign Up for Our Newsletter</h3>
         <form action="#">
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
@@ -42,7 +42,7 @@
         <a href="trips.html">Check Out Our Trips</a>
     </section>
 
-    <section class="content-grid">
+    <!-- <section class="content-grid">
         <div class="grid-item">
             <img src="images/pexels-hilmiisilak-1.jpg" alt="Rafting Experience">
             <p>Experience the thrill of white water rafting with our expert guides.</p>
@@ -51,7 +51,25 @@
             <img src="images/pexels-hilmiisilak-2.jpg" alt="Family Adventure">
             <p>Perfect for family adventures and group outings.</p>
         </div>
+    </section> -->
+    <section class="content-grid">
+        <div class="grid-item">
+            <img src="images/rafting12_1024.jpg" alt="Exciting Rafting Trip 1">
+            <h2>Exciting Rafting Trip</h2>
+            <p>Join us for an exhilarating adventure on one of the most exciting rivers. Perfect for thrill-seekers.</p>
+        </div>
+        <div class="grid-item">
+            <img src="images/rafting-in-blue-waters.jpeg" alt="Scenic Rafting Trip 2">
+            <h2>Scenic Rafting Trip</h2>
+            <p>Enjoy a scenic rafting trip with breathtaking views and tranquil waters. Ideal for a relaxing day out.</p>
+        </div>
+        <div class="grid-item">
+            <img src="images/boys-on-a-raft-smiling.jpeg" alt="Family Rafting Trip 3">
+            <h2>Family Rafting Trip</h2>
+            <p>Our family-friendly trip offers fun and excitement for all ages. A great way to bond with loved ones.</p>
+        </div>
     </section>
+
 
     <footer>
         <p>&copy; 2024 The Rafting Club. All rights reserved.</p>
