club rafting edits

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -40,6 +40,7 @@
     </div>
         
         <h1>Send Us A Message</h1>
+        <div class="form-container">
 <form action="#" method="post">
     <!-- Input 1 -->
     <div class="form-group">
@@ -93,10 +94,10 @@
         <button type="submit">Submit Quiz</button>
     </div>
 </form>
-
-
+        </div>
+<h1 class="employee-subheading">Our Employees</h1>
 <div class="employee-container">
-    <h1>Our Employees</h1>
+    
     <div class="employee">
         <img src="images/Audrey.jpeg" alt="A female clubrafting employee" width="185">
         <h3>Audrey</h3>
