--- a/wwr/index.html
+++ b/wwr/index.html
@@ -74,9 +74,9 @@
     <footer>
         <p>&copy; 2024 The Rafting Club. All rights reserved.</p>
         <div class="sociallinks">
-            <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
-            <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="images/Facebook_ Icon.webp" alt="Facebook"></a>
+            <a href="#"><img src="images/Twiiter_X_ Icon.webp" alt="Twitter"></a>
+            <a href="#"><img src="images/Instagram_Icon.webp" alt="Instagram"></a>
         </div>
         <a href="images/homepage_wireframe.png" class="wireframe-link">Home Page Wireframe</a>
     </footer>
